# cub3D

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cub3d.c  cub3d.h  cub3d_extras.h  draw_all_txt.c  draw_frame.c  draw_map.c  draw_sprites.c  draw_sprites_calc.c  draw_utils.c  drawings.c  exit_program.c  extra.c  hooks.c  init_structs.c  kek.c  keys.c  map.cub  minimap.cub  moves.c  parse.c  parse_args.c  parse_colors.c  parse_line_content.c  parse_map.c  parse_map_utils.c  parse_map_utils1.c  parse_map_utils2.c  parse_resolution.c  parse_textures.c  parser.c  read_map.c  render.c  save_screenshot.c  set_player_vectors.c  trgb_colors.c  (+2 more)
cub3D/: CMakeLists.txt  calculations.c  create_map_array.c  create_txt_and_sprite_imgs.c  cub3D  cub3d.h  dda.c  draw_all_txt.c  draw_map.c  draw_sprites.c  draw_sprites_calc.c  exit_program.c  libft.h  map.cub  parse.c  parse_args.c  parse_colors.c  parse_map.c  parse_map_utils1.c  parse_map_utils2.c  parse_resolution.c  parse_textures.c  read_map.c  render.c  save_screenshot.c  set_player_vectors.c
cub3D/extra/: drawings.c
cub3D/get_next_line/: README.md  get_next_line_utils.c
cub3D/libft/libft/: Makefile  ft_my_lstclear.c  ft_my_lstnew.c
cub3D/mlx/: libmlx.dylib  mlx_image.swiftsourceinfo  mlx_init.swiftsourceinfo  mlx_window.swiftsourceinfo
cub3D/textures/: binary.xpm  coin.xpm
extra/: extra.c
includes/: cub3d.h  cub3d_extras.h
srcs/: create_map_array.c  cub3d.c  draw_map.c  draw_sprites.c  draw_utils.c  exit_program.c  ft_alloc_check.c  init_structs.c  keys.c  moves.c  render.c  set_player_vectors.c  turns.c
srcs/parser/: parse.c  parse_args.c  parse_colors.c  parse_map.c  parse_map_utils1.c  parse_map_utils2.c  parse_resolution.c  parse_textures.c
srcs/utils/: drawings.c  get_pixel.c
textures/: barrel(wolf).xpm  barrel.xpm  binary.xpm  brick.xpm  crate.xpm  greenlight.xpm  kandinsky.xpm  lego.xpm
